{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 34,
  "lineage": "05d7def5-a176-c275-fe14-4ba360ac1345",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0273c2d18d22454a7",
            "arn": "arn:aws:ec2:us-east-1:938050482258:elastic-ip/eipalloc-0273c2d18d22454a7",
            "association_id": "eipassoc-013df41bc5f16f099",
            "domain": "vpc",
            "id": "eipalloc-0273c2d18d22454a7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a52f55d3dd428f4f",
            "private_dns": "ip-10-0-1-190.ec2.internal",
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-54-84-242-35.compute-1.amazonaws.com",
            "public_ip": "54.84.242.35",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnest-nat-eip"
            },
            "tags_all": {
              "Name": "cloudnest-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "eipalloc-0273c2d18d22454a7",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938050482258:internet-gateway/igw-0258a436cad76e49e",
            "id": "igw-0258a436cad76e49e",
            "owner_id": "938050482258",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnest-igw"
            },
            "tags_all": {
              "Name": "cloudnest-igw"
            },
            "vpc_id": "vpc-07337978a8c18f5db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "igw-0258a436cad76e49e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0273c2d18d22454a7",
            "association_id": "eipassoc-013df41bc5f16f099",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-07cf5469b121c5a4e",
            "network_interface_id": "eni-0a52f55d3dd428f4f",
            "private_ip": "10.0.1.190",
            "public_ip": "54.84.242.35",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f6ee989ac317f7c1",
            "tags": {
              "Name": "cloudnest-nat-gateway"
            },
            "tags_all": {
              "Name": "cloudnest-nat-gateway"
            },
            "vpc_id": "vpc-07337978a8c18f5db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "nat-07cf5469b121c5a4e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938050482258:route-table/rtb-090e140f7a14949bb",
            "id": "rtb-090e140f7a14949bb",
            "owner_id": "938050482258",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07cf5469b121c5a4e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudnest-private-rt"
            },
            "tags_all": {
              "Name": "cloudnest-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07337978a8c18f5db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "rtb-090e140f7a14949bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938050482258:route-table/rtb-058bde35b71f413f2",
            "id": "rtb-058bde35b71f413f2",
            "owner_id": "938050482258",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0258a436cad76e49e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudnest-public-rt"
            },
            "tags_all": {
              "Name": "cloudnest-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07337978a8c18f5db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "rtb-058bde35b71f413f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01814f94d6eebe501",
            "region": "us-east-1",
            "route_table_id": "rtb-090e140f7a14949bb",
            "subnet_id": "subnet-09be6a314d347db24"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "rtbassoc-01814f94d6eebe501",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd299bbf1ab8ee6",
            "region": "us-east-1",
            "route_table_id": "rtb-090e140f7a14949bb",
            "subnet_id": "subnet-0691f0cf8270ac145"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "rtbassoc-07fd299bbf1ab8ee6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet",
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ac9c7d76ec22d9b",
            "region": "us-east-1",
            "route_table_id": "rtb-058bde35b71f413f2",
            "subnet_id": "subnet-0f6ee989ac317f7c1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "rtbassoc-09ac9c7d76ec22d9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938050482258:subnet/subnet-09be6a314d347db24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09be6a314d347db24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938050482258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnest-private-subnet"
            },
            "tags_all": {
              "Name": "cloudnest-private-subnet"
            },
            "vpc_id": "vpc-07337978a8c18f5db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "subnet-09be6a314d347db24",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938050482258:subnet/subnet-0691f0cf8270ac145",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0691f0cf8270ac145",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "938050482258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnest-private-subnet-2"
            },
            "tags_all": {
              "Name": "cloudnest-private-subnet-2"
            },
            "vpc_id": "vpc-07337978a8c18f5db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "subnet-0691f0cf8270ac145",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938050482258:subnet/subnet-0f6ee989ac317f7c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6ee989ac317f7c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "938050482258",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnest-public-subnet"
            },
            "tags_all": {
              "Name": "cloudnest-public-subnet"
            },
            "vpc_id": "vpc-07337978a8c18f5db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "subnet-0f6ee989ac317f7c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudnest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudnest_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:938050482258:vpc/vpc-07337978a8c18f5db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2c5058b27d97550",
            "default_route_table_id": "rtb-0d38a4bd3088f8ac5",
            "default_security_group_id": "sg-06e80fb3ef9bcbd08",
            "dhcp_options_id": "dopt-05d1e3c1018745ddc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07337978a8c18f5db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d38a4bd3088f8ac5",
            "owner_id": "938050482258",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudnest-vpc"
            },
            "tags_all": {
              "Name": "cloudnest-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "938050482258",
            "id": "vpc-07337978a8c18f5db",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}